<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".view.CreateToDoActivity">

    <TextView
        android:id="@+id/text_create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_text_title"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_title"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_create_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_text_description"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_create_title" />

    <EditText
        android:id="@+id/edit_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_description"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_create_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_text_image"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_create_description" />

    <EditText
        android:id="@+id/edit_create_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/button_create_browse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_image"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_create_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_browse"
        app:layout_constraintBottom_toBottomOf="@id/edit_create_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_create_image" />

    <Button
        android:id="@+id/button_create_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_dark"
        android:padding="16dp"
        android:text="@string/create_button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>